Changed layout and structure for programme to show up correctly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
 <div class="row">
     <div class="eight columns">
-      <h3>The Conference</h3>
+      <h3>{{ page.title }}</h3>
 
       <!-- Grid Example -->
       <div class="row">
