--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
-  <title>Welcome to Foundation</title>
+  <title>{{ page.title }}</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
@@ -20,6 +20,7 @@
   <!-- Included CSS Files (Compressed) -->
   <link rel="stylesheet" href="/foundation/stylesheets/foundation.min.css">
   <link rel="stylesheet" href="/foundation/stylesheets/app.css">
+<link rel="stylesheet" href="/foundation/custom.css">
 
   <script src="/foundation/javascripts/modernizr.foundation.js"></script>
 
@@ -30,37 +31,122 @@
 
 </head>
 <body>
+<div id="wrapper" style="background-image:url(/img/bg.png);">
+	
 
   <div class="row">
     <div class="twelve columns">
-      <h2>IPI Autumn Planning Conference 2012</h2>
+	  <img src="/img/header.png" />
+	<hr />
+     <!-- <h2>IPI Autumn Planning Conference 2012</h2>
       <p>5<sup>th</sup> October 2012 <strong>Gibson Hotel, Dublin</strong> register now.</p>
-      <hr />
+      <hr />--> 
     </div>
   </div>
 
-<div class="row">
-    <div class="eight columns">
-      <h3>{{ page.title }}</h3>
-
-      <!-- Grid Example -->
-      <div class="row">
-        <div class="twelve columns">
-          <div class="panel">
-			 {{ content }}
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
-
-<div class="row">
+<!--<div class="row">
 	<div class="twelve columns">
-		<p>&copy;2012 Irish Planning Institute</p>
-		<p>Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
+		<ul class="nav-bar">
+		  <li><a href="/index.html">Home</a></li>
+		  <li class="has-flyout">
+		    <a href="/pages/programme">Programme</a>
+		    <a href="#" class="flyout-toggle"><span> </span></a>
+		    <ul class="flyout">
+		      <li><a href="#">Morning Session</a></li>
+		      <li><a href="#">Afternoon Session</a></li>
+		    </ul>
+		  </li>
+		  <li><a href="#">Book Now</a></li>
+		</ul>
+	</div>
+</div>-->
+
+<div class="row">
+	<div class="eight columns">
+
+		<!-- Grid Example -->
+		<div class="row">
+			<div class="twelve columns">
+				{{ content }}          
+			</div>
+		</div>
+	</div>
+
+	<div class="four columns">
+			<p class="vevent">
+				<a href="http://tiles.mapbox.com/rusty/map/map-y2zx7z5c"><img src="http://api.tiles.mapbox.com/v3/mapbox.mapbox-streets/pin-l-star+cc4422(-6.228,53.348)/-6.228,53.348,15/283x283.png" /></a>
+				The <span class="summary">IPI Autumn Conference</span> 
+				takes place on October 5th 2012 from
+				<abbr class="dtstart" title="2012-10-08T09:00:00+01:00">09h00</abbr>&ndash;<abbr class="dtend" title="012-10-08T16:00:00+01:00">16h00</abbr> at 
+				<span class="location">Gibson Hotel, Dublin</span> 
+				(<a class="url" href="http://ipi.ie">More Info</a>)
+			</p>
+			
+			
+			<a href="" class="section" style="float:left;">
+				<div class="title">
+					<h5>Conference Speakers</h5>
+				</div>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>			
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+				<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
+			</a>
+	
+		
+			<div id="tweet-stream" class="section">
+				<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
+				<script>
+				new TWTR.Widget({
+					version: 2,
+					type: 'search',
+					search: '#ipiconf OR @IrishPlanInst',
+					interval: 30000,
+					title: 'Irish Planning Institute Autumn Conference',
+					subject: '#ipiconf',
+					width: 'auto',
+					height: 300,
+					theme: {
+						shell: {
+							background: '#8ec1da',
+							color: '#ffffff'
+						},
+						tweets: {
+							background: '#ffffff',
+							color: '#444444',
+							links: '#1985b5'
+						}
+					},
+					features: {
+						scrollbar: false,
+						loop: true,
+						live: true,
+						behavior: 'default'
+					}
+					}).render().start();
+					</script>
+				</div>
+		
+		</div>
+
+	</div>
+
+<div id="footer">
+	<div class="row">
+		<div class="twelve columns">
+			<p>&copy;2012 Irish Planning Institute <br />
+			Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
+		</div>
 	</div>
 </div>
-
+</div>
   <!-- Included JS Files (Compressed) -->
   <script src="/foundation/javascripts/foundation.min.js"></script>
   
