Updated layout to include a nav bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,13 +37,34 @@
   <div class="row">
     <div class="twelve columns">
 	  <img src="{{base}}/img/header.png" />
-	<hr />
+	
      <!-- <h2>IPI Autumn Planning Conference 2012</h2>
       <p>5<sup>th</sup> October 2012 <strong>Gibson Hotel, Dublin</strong> register now.</p>
       <hr />--> 
     </div>
+	
   </div>
+<div class="row">
+	<div class="twelve columns">
+		<div class="navbar hide-for-small">
+			<a href="/">Home</a>
+			<a href="/pages/programme">Programme</a>
+			<a href="/pages/programme">Speakers</a>
+			<a href="/pages/programme">Venue</a>
+			
+			<a href="/pages/programme" class="button radius large alert" style="margin-left:250px;">Register Now</a>
+		</div>
 
+		<div class="show-for-small">
+			<ul class="nav-bar">
+				<li><a href="/pages/programme">Programme</a></li>
+				<li><a href="/pages/programme">Speakers</a></li>
+				<li><a href="/pages/programme">Register Now</a></li>
+				<li><a href="/pages/programme">Irish Planning Institute</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
 <!--<div class="row">
 	<div class="twelve columns">
 		<ul class="nav-bar">
