--- a/foundation/custom.css
+++ b/foundation/custom.css
@@ -32,3 +32,10 @@
 .section { padding: 10px 0 10px 0;}
 
 #wrapper {background:#FFF6E5 no-repeat center 40px;padding-top:40px;}
+.navbar {
+	margin: 15px 0 14px;
+	padding:15px 10px;;
+	background-color:#fff;
+	border-radius:6px;
+}
+.navbar a {text-transform:uppercase;font-weight:bold;padding:0 10px;font-size:17px;}
