--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,20 +47,20 @@
 <div class="row">
 	<div class="twelve columns">
 		<div class="navbar hide-for-small">
-			<a href="/">Home</a>
-			<a href="/pages/programme">Programme</a>
-			<a href="/pages/programme">Speakers</a>
-			<a href="/pages/programme">Venue</a>
+			<a href="{{base}}/">Home</a>
+			<a href="{{base}}/pages/programme">Programme</a>
+			<a href="{{base}}/pages/programme">Speakers</a>
+			<a href="{{base}}/pages/programme">Venue</a>
 			
-			<a href="/pages/programme" class="button radius large alert" style="margin-left:250px;">Register Now</a>
+			<a href="{{base}}/pages/programme" class="button radius large alert" style="margin-left:250px;">Register Now</a>
 		</div>
 
 		<div class="show-for-small">
 			<ul class="nav-bar">
-				<li><a href="/pages/programme">Programme</a></li>
-				<li><a href="/pages/programme">Speakers</a></li>
-				<li><a href="/pages/programme">Register Now</a></li>
-				<li><a href="/pages/programme">Irish Planning Institute</a></li>
+				<li><a href="{{base}}/pages/programme">Programme</a></li>
+				<li><a href="{{base}}/pages/programme">Speakers</a></li>
+				<li><a href="{{base}}/pages/programme">Register Now</a></li>
+				<li><a href="{{base}}/pages/programme">Irish Planning Institute</a></li>
 			</ul>
 		</div>
 	</div>
