--- a/foundation/custom.css
+++ b/foundation/custom.css
@@ -30,6 +30,9 @@
 }
 
 .section { padding: 10px 0 10px 0;}
+.section{ *zoom: 1; }
+.section:before, .section:after { content: ""; display: table; }
+.section:after { clear: both; }
 
 #wrapper {background:#FFF6E5 no-repeat center 40px;padding-top:40px;}
 .navbar {
@@ -39,3 +42,5 @@
 	border-radius:6px;
 }
 .navbar a {text-transform:uppercase;font-weight:bold;padding:0 10px;font-size:17px;}
+.social {font-size:2em;}
+.social a:hover {color:#FF00BF;}
