--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,11 @@
 
 </head>
 <body>
+<div class="row">
+	<div class="twelve columns">
+<a href="http://ipi.ie">&larr; Back to IPI.ie</a>
+	</div>
+</div>
 <div id="wrapper" style="background-image:url({{base}}/img/bg.png);">
 
 
@@ -51,7 +56,7 @@
 					<a href="{{base}}/">Home</a>
 					<a href="{{base}}/pages/programme">Programme</a>
 					<a href="{{base}}/pages/programme">Speakers</a>
-					<a href="{{base}}/pages/programme">Venue</a>
+					<a href="{{base}}/pages/venue">Venue</a>
 
 					<a href="{{base}}/pages/programme" class="button radius large alert" style="margin-left:250px;">Register Now</a>
 				</div>
