--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
 
 </head>
 <body>
-<div class="row">
-	<div class="twelve columns">
+<div class="row" style="background:#FFF6E5;">
+	<div class="twelve columns" style="background:#FFF6E5;">
 <a href="http://ipi.ie">&larr; Back to IPI.ie</a>
 	</div>
 </div>
