--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,11 @@
 
 </head>
 <body>
-<div class="row" style="background:#FFF6E5;">
-	<div class="twelve columns" style="background:#FFF6E5;">
-<a href="http://ipi.ie">&larr; Back to IPI.ie</a>
+<div id="ipi-link" style="background:#FFF6E5;">
+	<div class="row" >
+		<div class="twelve columns" style="background:#FFF6E5;">
+			<a href="http://ipi.ie">&larr; Back to IPI.ie</a>
+		</div>
 	</div>
 </div>
 <div id="wrapper" style="background-image:url({{base}}/img/bg.png);">
