--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 <body>
 <div id="ipi-link" style="background:#FFF6E5;">
 	<div class="row" >
-		<div class="twelve columns" style="background:#FFF6E5;">
-			<a href="http://ipi.ie">&larr; Back to IPI.ie</a>
+		<div class="twelve columns" style="background:#FFF6E5;padding-top:20px">
+			<a href="http://ipi.ie" style="padding:10px;background:#000;color:#FFF;margin-top:5px;border-radius:5px;">&larr; Back to IPI.ie</a>
 		</div>
 	</div>
 </div>
