--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,11 @@
 
 </head>
 <body>
-<div id="ipi-link" style="background:#FFF6E5;">
+<div id="ipi-link" style="padding-top:20px">
 	<div class="row" >
-		<div class="twelve columns" style="background:#FFF6E5;padding-top:20px">
-			<a href="http://ipi.ie" style="padding:10px;background:#000;color:#FFF;margin-top:5px;border-radius:5px;">&larr; Back to IPI.ie</a>
+		<div class="twelve columns">
+			<a href="http://ipi.ie" >&larr; Back to IPI.ie</a>
+			{% include social.html %}
 		</div>
 	</div>
 </div>
@@ -175,12 +176,10 @@
 							Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
 						</div>
 					<div class="four columns">
-							<p class="social">
-								<a href="http://twitter.com/IrishPlanInst"><i class="foundicon-twitter"></i></a>
-								<a href="http://www.facebook.com/pages/The-Irish-Planning-Institute/130744943633325"><i class="foundicon-facebook"></i></a>
-								<a href="http://www.linkedin.com/groups/Irish-Planning-Institute-3723889"><i class="foundicon-linkedin"></i></a>
+						<p class="social">
+							{% include social.html %}
 							</p>
-						</div>
+					</div>
 				</div>
 
 			</div>
