Updated _layouts/default.html with link to speakers page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 				<div class="navbar hide-for-small">
 					<a href="{{base}}/">Home</a>
 					<a href="{{base}}/pages/programme">Programme</a>
-					<a href="{{base}}/pages/programme">Speakers</a>
+					<a href="{{base}}/pages/speakers">Speakers</a>
 					<a href="{{base}}/pages/venue">Venue</a>
 
 					<a href="{{base}}/pages/programme" class="button radius large alert" style="margin-left:250px;">Register Now</a>
