made change to display the image below speakers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,6 +116,9 @@
 					<div class="title">
 						<h5>Conference Speakers</h5>
 					</div>
+					<div>
+					                      <img src="/img/speakers.png" />
+					                  	</div>
 					<div style="float:left;">
 						<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>			
 						<span class="thumb" style="background: url(http://developmentseed.org/images/team/eric.thumb.jpg)"></span>
