added button to download brochure for conference Updated _layouts/default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,8 @@
 					<a href="{{base}}/pages/programme">Programme</a>
 					<a href="{{base}}/pages/speakers">Speakers</a>
 					<a href="{{base}}/pages/venue">Venue</a>
-
+                  <a href="http://www.irishplanninginstitute.ie/uploads/files/IPI%202012%20Autumn%20conference%20brochure.pdf" class="button radius large alert has-tip" style="" data-width="210" title="Non IPI members download form and return to IPI Office.">Brochure/Booking Form</a>
+				</div>
                   <a href="http://www.irishplanninginstitute.ie/ipi/conference-tickets/" class="button radius large alert has-tip" style="margin-left:250px;" data-width="210" title="An IPI.ie login is required for online registration">Register Now</a>
 				</div>
 
