updated links and mobile links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,10 +67,13 @@
 
 				<div class="show-for-small">
 					<ul class="nav-bar">
+						<li><a href="http://ipi.ie" >&larr; Back to IPI.ie</a></li>
+						<li><a href="{{base}}/">Home</a></li>
 						<li><a href="{{base}}/pages/programme">Programme</a></li>
-						<li><a href="{{base}}/pages/programme">Speakers</a></li>
-						<li><a href="{{base}}/pages/programme">Register Now</a></li>
-						<li><a href="{{base}}/pages/programme">Irish Planning Institute</a></li>
+						<li><a href="{{base}}/pages/speakers">Speakers</a></li>
+						<li><a href="{{base}}/pages/venue">Venue</a></li>
+						<li><a href="http://www.irishplanninginstitute.ie/uploads/files/IPI%202012%20Autumn%20conference%20brochure.pdf" class="button radius large alert has-tip" data-width="210" title="Non IPI members must download form and return to IPI Office.">Booking Form</a></li>
+						<li><a href="http://www.irishplanninginstitute.ie/ipi/conference-tickets/" class="button radius large alert has-tip" data-width="210" title="An IPI.ie login is required for online registration">Register Online</a></li>
 					</ul>
 				</div>
 			</div>
@@ -97,7 +100,7 @@
 					(<a class="url" href="http://ipi.ie">More Info</a>)
 				</p>
 
-				<a href="" class="section">
+				<a href="{{base}}/pages/speakers" class="section">
 					<div class="title">
 						<h5>Conference Speakers</h5>
 					</div>
