--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,7 @@
 			</div>
 
 			<div class="four columns">
+              <h3>Live Tweets #ipiconf</h3>
               <div id="tweet-stream" class="section">
 					<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
 					<script>
