--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
 	<div class="row">
 		<div class="twelve columns">
 			<p>&copy;2012 Irish Planning Institute <br />
-			Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
+			Site designed by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
 		</div>
 	</div>
 </div>
